apps/staging/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: wildcard-staging-ronaldlokers-nl-tls
      hosts:
        - mealie.staging.ronaldlokers.nl
  rules:
    - host: mealie.staging.ronaldlokers.nl
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 9000
            path: /
            pathType: Prefix
